Admin pages styled

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -5,9 +5,12 @@ body {
     padding-bottom: 30px;
     line-height: 1.5;
     font-family: Georgia, "Times New Roman", Times, serif;
-    color: #555;
 }
 
 img {
     max-width: 100%;
+}
+
+textarea {
+    width: 100%;
 }
