--- a/app/css/icon.css
+++ b/app/css/icon.css
@@ -7,3 +7,14 @@
     max-height: 100px;
     max-width: 100px;
 }
+
+.icon-xl {
+    max-height: 500px;
+    max-width: 500px;
+}
+
+.icon-loading {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
