--- a/app/css/header.css
+++ b/app/css/header.css
@@ -19,6 +19,14 @@
     }
 }
 
+@media (max-width: 500px) {
+    .navbar-brand,
+    .navbar-nav li a {
+        line-height: 50px;
+        height: 50px;
+    }
+}
+
 .navbar {
     margin-bottom: 20px;
 }
