Font awesome added and /css refactored

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,5 @@
 @import "min/bootstrap.min.css";
+@import '../../node_modules/font-awesome/css/font-awesome.min.css';
 @import "./icon.css";
 
 body {
