--- a/app/css/pages/images.css
+++ b/app/css/pages/images.css
@@ -5,12 +5,6 @@
     max-height: 280px;
 }
 
-.album {
-    min-height: 50rem;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-}
-
 .card {
     float: left;
     width: 33.333%;
@@ -35,6 +29,10 @@
     font-size: 125%;
 }
 
+.title {
+    padding-bottom: 15px;
+}
+
 @media (max-width: 600px) {
     .card {
         width: 100%;
@@ -43,4 +41,33 @@
     .hidesmall {
         display: none;
     }
+}
+
+@media (max-width: 600px) {
+    .control-arrow {
+        top: 50% !important;
+        bottom: auto !important;
+    }
+}
+
+.videos .slide {
+    background: none;
+}
+
+.videos .carousel .control-prev.control-arrow:before {
+    border-right: 8px solid #000;
+}
+
+.videos .carousel .control-next.control-arrow:before {
+    border-left: 8px solid #000;
+}
+
+.videos .carousel .control-arrow:hover {
+    background: none;
+}
+
+.photos {
+    min-height: 50rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
